Do linting in CI, fix lint errors
Fixed one lint error in App.tsx.

Resolves #35

--- a/.github/workflows/on_pr.yaml
+++ b/.github/workflows/on_pr.yaml
@@ -14,3 +14,5 @@ jobs:
       - run: npm i
       - name: Check types
         run: npm run typecheck
+      - name: Lint TS/TSX
+        run: npm run lint
