Add Stylelint to CI; fix errors
Resolves #19

--- a/.github/workflows/on_pr.yaml
+++ b/.github/workflows/on_pr.yaml
@@ -15,4 +15,6 @@ jobs:
       - name: Check types
         run: npm run typecheck
       - name: Lint TS/TSX
-        run: npm run lint
+        run: npm run lintts
+      - name: Lint SCSS
+        run: npm run lintscss
