--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lintts": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lintscss": "stylelint '**/**.scss'",
     "typecheck": "tsc",
-    "check": "npm run lint && npm run typecheck",
+    "check": "npm run lintts && lintscss && npm run typecheck",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -27,6 +28,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
     "sass": "^1.63.4",
+    "stylelint": "^15.8.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-config-standard-scss": "^9.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.2"
   }
