--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lintscss": "stylelint '**/**.scss'",
     "typecheck": "tsc",
     "check": "npm run lintts && lintscss && npm run typecheck",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.4.0",
@@ -32,6 +33,7 @@
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2"
+    "vite": "^4.3.2",
+    "husky": "^8.0.0"
   }
 }
