--- a/.github/workflows/on_pr.yaml
+++ b/.github/workflows/on_pr.yaml
@@ -18,3 +18,6 @@ jobs:
         run: npm run lintts
       - name: Lint SCSS
         run: npm run lintscss
+      - name: Build the app
+        run: npm run build
+        
