--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,5 +60,4 @@ jobs:
           username: ${{ secrets.EC2USERNAME }}
           key: ${{ secrets.EC2SSH_KEY }}
           script: |
-            pm2 stop dallasByMetro
-            pm2 serve /home/ubuntu/dallasByMetro/dist --spa
+            pm2 reload default
