--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -60,4 +60,4 @@ jobs:
           username: ${{ secrets.EC2USERNAME }}
           key: ${{ secrets.EC2SSH_KEY }}
           script: |
-            pm2 reload default
+            npm run reload
