--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "typecheck": "tsc",
     "check": "npm run lintts && lintscss && npm run typecheck",
     "preview": "vite preview",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "reload": "pm2 reload default"
   },
   "dependencies": {
     "axios": "^1.4.0",
