--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
     "typecheck": "tsc",
     "check": "npm run lintts && lintscss && npm run typecheck",
     "preview": "vite preview",
-    "prepare": "husky install",
-    "reload": "pm2 reload default"
+    "prepare": "husky install"
   },
   "dependencies": {
     "axios": "^1.4.0",
