--- a/.github/workflows/on_pr.yaml
+++ b/.github/workflows/on_pr.yaml
@@ -10,7 +10,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-node@v3
         with:
-          node-version: '18'
+          node-version: "18"
       - run: npm i
       - name: Check types
         run: npm run typecheck
@@ -18,6 +18,7 @@ jobs:
         run: npm run lintts
       - name: Lint SCSS
         run: npm run lintscss
+      - name: Check prettiness
+        run: npx prettier --check .
       - name: Build the app
         run: npm run build
-        
