--- a/package.json
+++ b/package.json
@@ -26,14 +26,23 @@
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "husky": "^8.0.0",
+    "lint-staged": "^13.2.2",
+    "prettier": "^2.8.8",
     "sass": "^1.63.4",
     "stylelint": "^15.8.0",
     "stylelint-config-standard": "^33.0.0",
     "stylelint-config-standard-scss": "^9.0.0",
+    "stylelint-prettier": "^3.0.0",
     "typescript": "^5.0.2",
-    "vite": "^4.3.2",
-    "husky": "^8.0.0"
+    "vite": "^4.3.2"
+  },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": "eslint --cache --fix",
+    "*.{css,scss}": "stylelint --fix",
+    "*.{js,css,md,ts,tsx}": "prettier --write"
   }
 }
