--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,6 +23,8 @@ jobs:
         run: npm ci
 
       - name: Build
+        env:
+          VITE_API_URL: "https://api.dallasbymetro.com"
         run: npm run build
 
       - name: Archive production artifacts
